#1 Add cqrs example and change logging provider

--- a/OutpostImmobile.Api/appsettings.json
+++ b/OutpostImmobile.Api/appsettings.json
@@ -9,5 +9,19 @@
   "DispatchR": {
     "CoreAssembly": "OutpostImmobile.Core"
   },
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Console"],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName"],
+    "Properties": {
+      "ApplicationName": "Outpost Immobile"
+    }
+  },
+
   "AllowedHosts": "*"
 }
