--- a/OutpostImmobile.Api/OutpostImmobile.Api.csproj
+++ b/OutpostImmobile.Api/OutpostImmobile.Api.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="DispatchR.Mediator" Version="2.1.1" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
