--- a/OutpostImmobile.Core/OutpostImmobile.Core.csproj
+++ b/OutpostImmobile.Core/OutpostImmobile.Core.csproj
@@ -10,6 +10,8 @@
       <PackageReference Include="DispatchR.Mediator" Version="2.1.1" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.9" />
+      <PackageReference Include="Serilog" Version="4.3.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
