--- a/OutpostImmobile.Persistence/OutpostImmobile.Persistence.csproj
+++ b/OutpostImmobile.Persistence/OutpostImmobile.Persistence.csproj
@@ -9,6 +9,8 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+      <PackageReference Include="System.Globalization" Version="4.3.0" />
+      <PackageReference Include="System.Globalization.Extensions" Version="4.3.0" />
     </ItemGroup>
 
 </Project>
