[Communication] #35 Add MailService logic and register it as transient and create SmsService.cs

--- a/OutpostImmobile.Api/appsettings.json
+++ b/OutpostImmobile.Api/appsettings.json
@@ -25,6 +25,13 @@
       "ApplicationName": "Outpost Immobile"
     }
   },
+  "MailOptions": {
+    "Sender": "",
+    "SenderMailAddress": "",
+    "SenderPassword": "",
+    "SmtpHost": "",
+    "port": 587
+  },
 
   "AllowedHosts": "*"
 }
