--- a/OutpostImmobile.Core/OutpostImmobile.Core.csproj
+++ b/OutpostImmobile.Core/OutpostImmobile.Core.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Communication\Communication.csproj" />
       <ProjectReference Include="..\OutpostImmobile.Persistence\OutpostImmobile.Persistence.csproj" />
     </ItemGroup>
 
