Fix project layout

--- a/OutpostImmobile.Core/OutpostImmobile.Core.csproj
+++ b/OutpostImmobile.Core/OutpostImmobile.Core.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Communication\Communication.csproj" />
+      <ProjectReference Include="..\OutpostImmobile.Communication\OutpostImmobile.Communication.csproj" />
       <ProjectReference Include="..\OutpostImmobile.Persistence\OutpostImmobile.Persistence.csproj" />
     </ItemGroup>
 
