--- a/OutpostImmobile.Persistence/OutpostImmobile.Persistence.csproj
+++ b/OutpostImmobile.Persistence/OutpostImmobile.Persistence.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.9" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+      <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
       <PackageReference Include="System.Globalization" Version="4.3.0" />
       <PackageReference Include="System.Globalization.Extensions" Version="4.3.0" />
