Write test for SendMessage and fix small issues

--- a/OutpostImmobile.Api/appsettings.json
+++ b/OutpostImmobile.Api/appsettings.json
@@ -26,11 +26,11 @@
     }
   },
   "MailOptions": {
-    "Sender": "",
-    "SenderMailAddress": "",
-    "SenderPassword": "",
-    "SmtpHost": "",
-    "port": 587
+    "Sender": "Catherine Stracke",
+    "SenderMailAddress": "catherine.stracke@ethereal.email",
+    "SenderPassword": "f1YemzjAGU373Nq49S",
+    "SmtpHost": "smtp.ethereal.email",
+    "Port": 587
   },
 
   "AllowedHosts": "*"
