[Communication] #35 Add MailService logic, register it as transient and create SmsService.cs (#51)
* mail sending logic and mail options

* [Communication] #35 Add MailService logic and register it as transient and create SmsService.cs

* Fix project layout

* Fix minor errors

* Write test for SendMessage and fix small issues

* [Communication] #35 Add MailService logic and create tests

* Fix sln file

---------

Co-authored-by: FilipKwiek <filip.kwiek@hued.me>
Co-authored-by: Filip <filipkwiek888@gmail.com>

--- a/OutpostImmobile.Api/appsettings.json
+++ b/OutpostImmobile.Api/appsettings.json
@@ -25,6 +25,13 @@
       "ApplicationName": "Outpost Immobile"
     }
   },
+  "MailOptions": {
+    "Sender": "Catherine Stracke",
+    "SenderMailAddress": "catherine.stracke@ethereal.email",
+    "SenderPassword": "f1YemzjAGU373Nq49S",
+    "SmtpHost": "smtp.ethereal.email",
+    "Port": 587
+  },
 
   "AllowedHosts": "*"
 }
