--- a/OutpostImmobile.Api/OutpostImmobile.Api.csproj
+++ b/OutpostImmobile.Api/OutpostImmobile.Api.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OutpostImmobile.Core.Paralizator\OutpostImmobile.Core.Paralizator.csproj" />
     <ProjectReference Include="..\OutpostImmobile.Core\OutpostImmobile.Core.csproj" />
     <ProjectReference Include="..\OutpostImmobile.Persistence\OutpostImmobile.Persistence.csproj" />
   </ItemGroup>
