Add missing elements and create basic layout

--- a/.gitignore
+++ b/.gitignore
@@ -492,7 +492,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-outpostimmobile.app/node_modules
+./outpostimmobile.app/node_modules
 ./outpostimmobile.app/dist
 ./outpostimmobile.app/dist-ssr
 *.local
