Template for classes and some mediator work done

--- a/OutpostImmobile.Core/OutpostImmobile.Core.csproj
+++ b/OutpostImmobile.Core/OutpostImmobile.Core.csproj
@@ -16,7 +16,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\OutpostImmobile.Communication\OutpostImmobile.Communication.csproj" />
+      <ProjectReference Include="..\OutpostImmobile.Core.Integrations.KMZB\OutpostImmobile.Core.Integrations.KMZB.csproj" />
       <ProjectReference Include="..\OutpostImmobile.Persistence\OutpostImmobile.Persistence.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Status\" />
     </ItemGroup>
 
 </Project>
