--- a/OutpostImmobile.Core.Integrations.KMZB/OutpostImmobile.Core.Integrations.KMZB.csproj
+++ b/OutpostImmobile.Core.Integrations.KMZB/OutpostImmobile.Core.Integrations.KMZB.csproj
@@ -7,8 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MailKit" Version="4.14.1" />
-      <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.11" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.11" />
     </ItemGroup>
 
 </Project>
