--- a/OutpostImmobile.Persistence/OutpostImmobile.Persistence.csproj
+++ b/OutpostImmobile.Persistence/OutpostImmobile.Persistence.csproj
@@ -12,7 +12,11 @@
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.11" />
+      <PackageReference Include="NetTopologySuite" Version="2.6.0" />
+      <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="4.0.0" />
+      <PackageReference Include="NetTopologySuite.IO.PostGis" Version="2.1.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NetTopologySuite" Version="9.0.4" />
       <PackageReference Include="Sulmar.Bogus.Extensions.Poland" Version="1.0.0" />
       <PackageReference Include="System.Globalization" Version="4.3.0" />
       <PackageReference Include="System.Globalization.Extensions" Version="4.3.0" />
