--- a/OutpostImmobile.Communication/OutpostImmobile.Communication.csproj
+++ b/OutpostImmobile.Communication/OutpostImmobile.Communication.csproj
@@ -8,14 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="MailKit" Version="4.14.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.11" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.11" />
     </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
-        <HintPath>..\..\..\.nuget\packages\microsoft.extensions.configuration.abstractions\9.0.11\lib\net9.0\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
-      </Reference>
-    </ItemGroup>
-
 </Project>
