--- a/OutpostImmobile.Communication/OutpostImmobile.Communication.csproj
+++ b/OutpostImmobile.Communication/OutpostImmobile.Communication.csproj
@@ -8,7 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="MailKit" Version="4.14.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.11" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.11" />
     </ItemGroup>
-
 </Project>
