--- a/Applications/OutpostImmobile.Api/OutpostImmobile.Api.csproj
+++ b/Applications/OutpostImmobile.Api/OutpostImmobile.Api.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="NetTopologySuite" Version="2.6.0" />
     <PackageReference Include="NetTopologySuite.IO.PostGis" Version="2.1.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NetTopologySuite" Version="10.0.0" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.11.6" />
     <PackageReference Include="Serilog" Version="4.3.1-dev-02395" />
     <PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
