--- a/Core/OutpostImmobile.Communication/OutpostImmobile.Communication.csproj
+++ b/Core/OutpostImmobile.Communication/OutpostImmobile.Communication.csproj
@@ -10,6 +10,8 @@
       <PackageReference Include="MailKit" Version="4.14.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.1" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="10.0.1" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.1" />
     </ItemGroup>
 </Project>
