--- a/Applications/outpostimmobile.app/package.json
+++ b/Applications/outpostimmobile.app/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^6.4.5",
+    "@mui/x-data-grid": "^8.23.0",
     "@mui/x-charts": "^7.7.0",
     "@mui/x-date-pickers": "^7.27.0",
     "@tanstack/react-query": "^5.45.1",
