Fix authorization and add global exception handling

--- a/Applications/OutpostImmobile.Api/appsettings.json
+++ b/Applications/OutpostImmobile.Api/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=OutpostImmobile;User Id=postgres;Password=postgres;"
   },
+  "Jwt": {
+    "Issuer": "https://localhost:7078",
+    "Audience": "https://localhost:7078",
+    "Key": "PRIVATE_GOY_KEY_DONT_LET_JEWS_KNOW"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -32,6 +37,5 @@
     "SmtpHost": "smtp.ethereal.email",
     "Port": 587
   },
-
   "AllowedHosts": "*"
 }
