--- a/Core/OutpostImmobile.Core/OutpostImmobile.Core.csproj
+++ b/Core/OutpostImmobile.Core/OutpostImmobile.Core.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="DispatchR.Mediator" Version="2.1.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.1" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.1" />
       <PackageReference Include="Serilog" Version="4.3.0" />
