--- a/Applications/outpostimmobile.app/package.json
+++ b/Applications/outpostimmobile.app/package.json
@@ -16,14 +16,16 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^6.4.5",
-    "@mui/x-data-grid": "^8.23.0",
     "@mui/x-charts": "^7.7.0",
+    "@mui/x-data-grid": "^8.23.0",
     "@mui/x-date-pickers": "^7.27.0",
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "material-react-table": "^3.2.0",
     "notistack": "^3.0.1",
+    "openapi-fetch": "^0.15.0",
+    "openapi-react-query": "^0.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
@@ -42,9 +44,10 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "openapi-typescript": "^7.10.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.2.2",
+    "typescript": "^5.9.3",
     "vite": "^7.1.9"
   }
 }
