Fix docker things

--- a/Applications/OutpostImmobile.Api/Dockerfile
+++ b/Applications/OutpostImmobile.Api/Dockerfile
@@ -1,18 +1,22 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
+﻿FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS base
 USER $APP_UID
 WORKDIR /app
-EXPOSE 5000
-EXPOSE 5001
+EXPOSE 8080
+EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["OutpostImmobile.Api/OutpostImmobile.Api.csproj", "OutpostImmobile.Api/"]
-COPY ["OutpostImmobile.Core/OutpostImmobile.Core.csproj", "OutpostImmobile.Core/"]
-COPY ["OutpostImmobile.Persistence/OutpostImmobile.Persistence.csproj", "OutpostImmobile.Persistence/"]
-RUN dotnet restore "OutpostImmobile.Api/OutpostImmobile.Api.csproj"
+COPY ["Applications/OutpostImmobile.Api/OutpostImmobile.Api.csproj", "Applications/OutpostImmobile.Api/"]
+COPY ["Core/OutpostImmobile.Core.Common/OutpostImmobile.Core.Common.csproj", "Core/OutpostImmobile.Core.Common/"]
+COPY ["Persistence/OutpostImmobile.Persistence/OutpostImmobile.Persistence.csproj", "Persistence/OutpostImmobile.Persistence/"]
+COPY ["Core/OutpostImmobile.Core.Mediator/OutpostImmobile.Core.Mediator.csproj", "Core/OutpostImmobile.Core.Mediator/"]
+COPY ["Core/OutpostImmobile.Core/OutpostImmobile.Core.csproj", "Core/OutpostImmobile.Core/"]
+COPY ["Core/OutpostImmobile.Communication/OutpostImmobile.Communication.csproj", "Core/OutpostImmobile.Communication/"]
+COPY ["Core/OutpostImmobile.Core.Integrations.KMZB/OutpostImmobile.Core.Integrations.KMZB.csproj", "Core/OutpostImmobile.Core.Integrations.KMZB/"]
+RUN dotnet restore "Applications/OutpostImmobile.Api/OutpostImmobile.Api.csproj"
 COPY . .
-WORKDIR "/src/OutpostImmobile.Api"
+WORKDIR "/src/Applications/OutpostImmobile.Api"
 RUN dotnet build "./OutpostImmobile.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
