--- a/Applications/OutpostImmobile.App/Dockerfile
+++ b/Applications/OutpostImmobile.App/Dockerfile
@@ -1,32 +1,27 @@
-# Dockerfile
+# Step 1: Use a modern Node.js image to build the app
+FROM node:22-alpine AS builder
 
-# Step 1: Use a Node.js image to build the app
-FROM node:24 as builder
-
-# Set working directory inside the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY package*.json ./
+# Copy package files (Assumes build context is the Repo Root)
+COPY Applications/OutpostImmobile.App/package*.json ./
 
-# Install dependencies
 RUN npm install
 
-# Copy the rest of the app’s source code
-COPY . .
+# Copy the source code
+COPY Applications/OutpostImmobile.App/ ./
 
-# Build the app
 RUN npm run build
-
 
 # Step 2: Use an Nginx image to serve the static files
 FROM nginx:alpine
 
-# Copy the build files from the builder stage to the Nginx web directory
+# Copy the build output (Ensure your project uses Vite. If using CRA, change 'dist' to 'build')
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Expose port 5002
+# FIX: Configure Nginx to listen on 5002 instead of default 80
+RUN sed -i 's/80/5002/g' /etc/nginx/conf.d/default.conf
+
 EXPOSE 5002
 
-# Start Nginx server
 CMD ["nginx", "-g", "daemon off;"]
