--- a/Persistence/OutpostImmobile.Persistence/OutpostImmobile.Persistence.csproj
+++ b/Persistence/OutpostImmobile.Persistence/OutpostImmobile.Persistence.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Bogus" Version="35.6.5" />
+      <PackageReference Include="CsvHelper" Version="33.1.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
