--- a/Applications/OutpostImmobile.App/package.json
+++ b/Applications/OutpostImmobile.App/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "material-react-table": "^3.2.0",
     "notistack": "^3.0.1",
     "openapi-fetch": "^0.15.0",
