--- a/Applications/OutpostImmobile.App/package.json
+++ b/Applications/OutpostImmobile.App/package.json
@@ -27,14 +27,16 @@
     "notistack": "^3.0.1",
     "openapi-fetch": "^0.15.0",
     "openapi-react-query": "^0.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-hook-form": "^7.52.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router": "^7.1.1",
     "url-join": "^5.0.0",
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^22.13.5",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
