--- a/Core/OutpostImmobile.Core.Tests/OutpostImmobile.Core.Tests.csproj
+++ b/Core/OutpostImmobile.Core.Tests/OutpostImmobile.Core.Tests.csproj
@@ -16,12 +16,16 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
         <PackageReference Include="Moq" Version="4.20.72" />
+        <PackageReference Include="netDumbster" Version="3.1.1" />
         <PackageReference Include="NUnit" Version="4.4.0" />
         <PackageReference Include="NUnit.Analyzers" Version="4.11.2">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="NUnit3TestAdapter" Version="6.0.0" />
+        <PackageReference Include="Polly" Version="8.6.5" />
+        <PackageReference Include="Rnwood.SmtpServer" Version="2.0.5.1" />
+        <PackageReference Include="Testcontainers" Version="4.10.0" />
     </ItemGroup>
 
     <ItemGroup>
