--- a/Applications/OutpostImmobile.App/package.json
+++ b/Applications/OutpostImmobile.App/package.json
@@ -1,14 +1,14 @@
 {
   "name": "outpostimmobile.app",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "main": "main.ts",
   "scripts": {
-    "start": "vite",
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:build": "tsc && vite build && electron-builder"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -21,6 +21,10 @@
     "@mui/x-date-pickers": "^7.27.0",
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
+    "electron": "^40.0.0",
+    "electron-builder": "^26.4.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "material-react-table": "^3.2.0",
@@ -33,6 +37,8 @@
     "react-leaflet": "^5.0.0-rc.2",
     "react-router": "^7.1.1",
     "url-join": "^5.0.0",
+    "vite-plugin-electron": "^0.29.0",
+    "wait-on": "^9.0.3",
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
