[IO] ADD ACCEPTANCE TESTS IOIOIO

--- a/Core/OutpostImmobile.Core.Tests.Unit/OutpostImmobile.Core.Tests.Unit.csproj
+++ b/Core/OutpostImmobile.Core.Tests.Unit/OutpostImmobile.Core.Tests.Unit.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
+        <RootNamespace>OutpostImmobile.Core.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
