--- a/Core/OutpostImmobile.Core.Tests.Acceptance/OutpostImmobile.Core.Tests.Acceptance.csproj
+++ b/Core/OutpostImmobile.Core.Tests.Acceptance/OutpostImmobile.Core.Tests.Acceptance.csproj
@@ -6,7 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
-        <RootNamespace>OutpostImmobile.Core.Tests.Playwright</RootNamespace>
+        <RootNamespace>OutpostImmobile.Core.Tests.Acceptance</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -16,10 +16,18 @@
         <PackageReference Include="NUnit" Version="4.3.2"/>
         <PackageReference Include="NUnit.Analyzers" Version="4.7.0"/>
         <PackageReference Include="NUnit3TestAdapter" Version="5.0.0"/>
+        <PackageReference Include="Moq" Version="4.20.72" />
     </ItemGroup>
 
     <ItemGroup>
         <Using Include="NUnit.Framework"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Applications\OutpostImmobile.Api\OutpostImmobile.Api.csproj" />
+      <ProjectReference Include="..\..\Persistence\OutpostImmobile.Persistence\OutpostImmobile.Persistence.csproj" />
+      <ProjectReference Include="..\OutpostImmobile.Core.Mediator\OutpostImmobile.Core.Mediator.csproj" />
+      <ProjectReference Include="..\OutpostImmobile.Core\OutpostImmobile.Core.csproj" />
     </ItemGroup>
 
 </Project>
