--- a/Core/OutpostImmobile.Core.Tests.Acceptance/OutpostImmobile.Core.Tests.Acceptance.csproj
+++ b/Core/OutpostImmobile.Core.Tests.Acceptance/OutpostImmobile.Core.Tests.Acceptance.csproj
@@ -6,12 +6,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
-        <RootNamespace>OutpostImmobile.Core.Tests.Playwright</RootNamespace>
+        <RootNamespace>OutpostImmobile.Core.Tests.Acceptance</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.4"/>
         <PackageReference Include="FitSharp" Version="2025.11.17" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0"/>
         <PackageReference Include="NUnit" Version="4.3.2"/>
         <PackageReference Include="NUnit.Analyzers" Version="4.7.0"/>
@@ -23,7 +24,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="PU8\" />
+      <ProjectReference Include="..\..\Persistence\OutpostImmobile.Persistence\OutpostImmobile.Persistence.csproj" />
+      <ProjectReference Include="..\OutpostImmobile.Communication\OutpostImmobile.Communication.csproj" />
+      <ProjectReference Include="..\OutpostImmobile.Core.Integrations.KMZB\OutpostImmobile.Core.Integrations.KMZB.csproj" />
     </ItemGroup>
 
 </Project>
